fixed whitespace

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,7 +81,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6, p {
-  font-family: 'Avenire Next LT Pro', sans-serif;
+  font-family: 'Avenir Next LT Pro', sans-serif;
 }
 
 .full-page-header {
